; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_kernel_thread_start_priority.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_kernel_thread_start_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @kernel_thread_start_priority(i32 %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call i64 @kernel_thread_create(i32 %12, i8* %13, i32 %14, i32* %11)
  store i64 %15, i64* %10, align 8
  %16 = load i64, i64* %10, align 8
  %17 = load i64, i64* @KERN_SUCCESS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %4
  %20 = load i64, i64* %10, align 8
  store i64 %20, i64* %5, align 8
  br label %31

21:                                               ; preds = %4
  %22 = load i32, i32* %11, align 4
  %23 = load i32*, i32** %9, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* %11, align 4
  %25 = call i32 @thread_mtx_lock(i32 %24)
  %26 = load i32, i32* %11, align 4
  %27 = call i32 @thread_start(i32 %26)
  %28 = load i32, i32* %11, align 4
  %29 = call i32 @thread_mtx_unlock(i32 %28)
  %30 = load i64, i64* %10, align 8
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %21, %19
  %32 = load i64, i64* %5, align 8
  ret i64 %32
}

declare dso_local i64 @kernel_thread_create(i32, i8*, i32, i32*) #1

declare dso_local i32 @thread_mtx_lock(i32) #1

declare dso_local i32 @thread_start(i32) #1

declare dso_local i32 @thread_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
